# CVD-Pruner

./: README.md  install.sh  pyproject.toml  requirements.txt
llava/model/: llava_arch.py
llava/model/language_model/: fastv_kvcache.py  llava_llama.py  llava_qwen.py
llava/model/multimodal_encoder/: clip_encoder.py  siglip_encoder.py
lmms-eval/: pyproject.toml
lmms-eval/examples/models/: llava_1_5.sh  llava_onevision.sh  qwen25vl.sh
lmms-eval/lmms_eval/models/: llava.py  llava_onevision.py  qwen2_5_vl.py
lmms-eval/lmms_eval/tasks/mantis_eval/: mantis_eval.yaml  utils.py
lmms-eval/lmms_eval/tasks/mibench/: mibench.yaml  utils.py
lmms-eval/lmms_eval/tasks/mlvu/: mlvu_test.yaml  utils.py
lmms-eval/lmms_eval/tasks/muirbench/: muirbench.yaml  utils.py
token_compressor/cvdpruner/: llava.py  qwen2_5_vl.py
